Fix spacing of cards

--- a/app/assets/stylesheets/website/objects/card_row.scss
+++ b/app/assets/stylesheets/website/objects/card_row.scss
@@ -1,4 +1,7 @@
 .o-card-row {
+}
+
+.o-card-row--bg {
   background: #9797a3;
 }
 
